--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -63,3 +63,26 @@
 - IR中Ad部分-MAR-M-MDR-ALU
 #### PC
 - 每取完一条指令，还必须计算下一条指令的地址，为取下一条指令做准备：PC+1 - PC
+
+## 计算机主要性能指标
+ 主要讨论硬件相关的性能指标
+### 机器字长
+- CPU通用的整数计算的数据通路宽度
+- 字长通常就是通用寄存器的位数
+- 指令字长：一条指令中包含的二进制代码的位数
+- 存储字长：一个存储单元中存储的二进制代码的长度
+- 存储字长一般都要求是字节长度的整数倍，指令字长一般都要求是存储字长的整数倍
+### 数据通路带宽
+- 数据总线一次所能并行传送信息的位数
+### 存储容量
+- 包括主存容量和辅存容量，一般关注主存（内存）容量
+### 运算速度
+- 与机器的主频、CPU的结构、执行操作的类型、主存本身的速度有关。
+
+## 专业术语
+- 吞吐量：系统在单位时间内处理请求的数量，主要取决于主存的存取周期
+- 主频（CPU频率）：CPU的时钟频率，单位是赫兹（Hz）
+- CPU时钟周期：节拍脉冲的宽度或者周期，也就是主频的倒数，是CPU中最小的时间单位
+- CPI：执行一条指令所需的时钟周期数。一般指该机器中所有指令执行所需的平均时钟周期数。
+- MIPS：每秒执行的指令数（百万级）
+- MFLOPS：每秒执行的浮点计算数（百万级）
