--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -86,3 +86,9 @@
 - CPI：执行一条指令所需的时钟周期数。一般指该机器中所有指令执行所需的平均时钟周期数。
 - MIPS：每秒执行的指令数（百万级）
 - MFLOPS：每秒执行的浮点计算数（百万级）
+
+# 二、数据的表示和运算
+## 数制与编码
+## 运算方法和运算电路
+## 整数的表示和运算
+## 浮点数的表示和运算
