--- a/计算机组成原理.md
+++ b/计算机组成原理.md
@@ -89,6 +89,14 @@
 
 # 二、数据的表示和运算
 ## 数制与编码
+### 原码
+easy啦
+### 补码
+正数是本身，负数与补码相加得到刚好溢出。
+补码就是原码符号位不变，数值位取反+1。
+补码数左移时符号位不变其他位左移，右移时往数值位的最高位补符号位的数。
+- 双符号位补码
+    符号位00表正数，11表负数，01和10表示溢出。
 ## 运算方法和运算电路
 ## 整数的表示和运算
 ## 浮点数的表示和运算
